--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@ The History of Sound by Ben Shattuck"></textarea>
     </section>
   </main>
 
+  <div class="floating-toggle">
+  <button class="secondary" id="exitScreenshotBtn">Exit Screenshot Mode</button>
+</div>
+
   <footer class="footer">
-    <span>Made for Bookstagram </span>
+    <span>Made by Becca Risa Luna</span>
   </footer>
 
   <script src="./app.js"></script>
