--- a/index.html
+++ b/index.html
@@ -38,25 +38,31 @@ The History of Sound by Ben Shattuck"></textarea>
       <div class="error" id="errorText"></div>
     </section>
 
-    <section class="story-area" aria-label="Book cover grid">
-      <div class="grid" id="grid"></div>
+   <section class="story-area" aria-label="Book cover grid">
+  <!-- Capture area -->
+  <div class="capture" id="captureArea">
+    <div class="grid" id="grid"></div>
+  </div>
+</section>
 
-      <div class="export-controls">
-        <!-- Web version: keep this as "How to save" rather than PNG export (CORS makes it unreliable) -->
-        <div class="hint" id="saveHint">
-          Tip: Turn on <strong>Screenshot Mode</strong> for a clean capture.
-        </div>
-      </div>
-    </section>
+<!-- Tip is now OUTSIDE capture area -->
+<div class="below-tip" id="saveHint">
+  Tip: Turn on <strong>Screenshot Mode</strong> for a clean capture.
+</div>
+
   </main>
 
-  <div class="floating-toggle">
-  <button class="secondary" id="exitScreenshotBtn">Exit Screenshot Mode</button>
-</div>
+
 
   <footer class="footer">
     <span>Made by Becca Risa Luna</span>
   </footer>
+  
+<div class="floating-toggle" id="floatingToggle" hidden>
+  <button class="secondary" id="exitScreenshotBtn" type="button">
+    Exit Screenshot Mode
+  </button>
+</div>
 
   <script src="./app.js"></script>
 </body>
