--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@ The History of Sound by Ben Shattuck"></textarea>
     </section>
 
     <!-- BOOK GRID capture area -->
-   <section class="story-area" aria-label="Book cover grid">
+<section class="story-area" aria-label="Book cover grid">
   <div class="frame" id="frame">
     <div class="grid" id="grid"></div>
   </div>
 
+  <p class="below-tip">
+    Tip: Take a screenshot, then crop to the rounded white frame.
+  </p>
+</section>
 
-<!-- OUTSIDE capture area -->
-<div class="below-tip" id="saveHint">
-    Tip: Take a screenshot, then crop. 
-</div>
 
   </main>
 
