--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BookGrid: Turn Your Reading List Into a Visual Grid for Instagramr</title>
+  <title>BookGrid: Turn Your Reading List Into a Visual Grid for Instagram</title>
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="styles.css">
@@ -15,8 +15,7 @@
   <div class="container">
     <header>
       <h1>BookGrid</h1>
-      <p class="subtitle">Turn your 2025 reading list into an image-only bookshelf grid to easily share. 
-</p>
+      <p class="subtitle">Turn your 2025 reading list into an image-only bookshelf grid to easily share.</p>
     </header>
     
     <div class="input-section">
